Set correct z-index for inactiveWindow

--- a/resources/src/component/InactiveWindow/InactiveWindow.scss
+++ b/resources/src/component/InactiveWindow/InactiveWindow.scss
@@ -5,6 +5,7 @@
   left: 0;
   top: 0;
   background-color: rgba(0,0,0,0.3);
+  z-index: 99999;
 
   .inner {
     width: 50vw;
